--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 #Site
-title: 水榭清松-Song Kong
-description: This is Song' home.
+title: charles404
+description: This is charles404' home.
 logo: favicon.png
-url: kongsong.me
+url: 
 rss_url: /feed.xml
 
 # Jekyll
@@ -20,13 +20,13 @@ sass:
   style:            compressed
 
 # Social Links
-email:               hi@kongsong.me
+email:               
 #google.plus:        username
 #twitter:            username
-facebook:            kongsong
-github:              songkong
-stackoverflow:      6438519/song-kong   #from a "http://stackoverflow.com/users/123456/username" link
-linkedin:           kongsong
+facebook:            username
+github:              username
+stackoverflow:      #from a "http://stackoverflow.com/users/123456/username" link
+linkedin:           username
 #xing:              username
 #instagram:          username
 #lastfm:            username
